POWR-291 add address fields to groups, group contact view modes

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -3,21 +3,61 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.elected_official.field_address
+    - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
+    - field.field.group.elected_official.field_email
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
+    - field.field.group.elected_official.field_phone
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
     - image.style.thumbnail
   module:
+    - address
+    - field_group
     - image
     - maxlength
+    - telephone
+third_party_settings:
+  field_group:
+    group_contact_information:
+      children:
+        - field_address
+        - field_email
+        - field_phone
+        - field_building
+      parent_name: ''
+      weight: 20
+      format_type: fieldset
+      format_settings:
+        id: contact-information
+        classes: ''
+        description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
+        required_fields: true
+      label: 'Contact Information'
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
+  field_address:
+    weight: 6
+    settings:
+      default_country: null
+    third_party_settings: {  }
+    type: address_default
+    region: content
+  field_building:
+    weight: 9
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_bureaus:
     weight: 4
     settings:
@@ -26,6 +66,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_email:
+    weight: 7
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: email_default
     region: content
   field_logo:
     type: image_image
@@ -42,6 +90,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_phone:
+    weight: 8
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: telephone_default
     region: content
   field_shortname_or_acronym:
     weight: 2
