--- a/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.contact_information.yml
@@ -1,8 +1,9 @@
-uuid: dddc2c71-a291-4cb3-9602-fcbcf71e8c37
+uuid: 36c62cde-2bab-4b12-be1e-c16213d00095
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.contact_information
     - field.field.group.elected_official.field_address
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
@@ -13,36 +14,51 @@ dependencies:
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
-id: group.elected_official.default
+  module:
+    - address
+    - telephone
+id: group.elected_official.contact_information
 targetEntityType: group
 bundle: elected_official
-mode: default
+mode: contact_information
 content:
-  field_summary:
+  field_address:
+    type: address_default
     weight: 1
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_email:
+    type: basic_string
+    weight: 3
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+  field_official_title:
+    type: string
+    weight: 0
+    region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
+  field_phone:
+    type: telephone_link
+    weight: 2
     region: content
-  label:
     label: hidden
-    type: string
-    weight: 0
-    region: content
     settings:
-      link_to_entity: false
+      title: ''
     third_party_settings: {  }
 hidden:
   changed: true
   created: true
-  field_address: true
   field_building: true
   field_bureaus: true
-  field_email: true
   field_logo: true
-  field_official_title: true
-  field_phone: true
   field_shortname_or_acronym: true
+  field_summary: true
+  label: true
   uid: true
