--- a/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.teaser.yml
@@ -1,8 +1,9 @@
-uuid: dddc2c71-a291-4cb3-9602-fcbcf71e8c37
+uuid: ae2bbd97-d35f-4df0-91e8-1ba0adbe5ca4
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.teaser
     - field.field.group.elected_official.field_address
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
@@ -13,10 +14,10 @@ dependencies:
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
-id: group.elected_official.default
+id: group.elected_official.teaser
 targetEntityType: group
 bundle: elected_official
-mode: default
+mode: teaser
 content:
   field_summary:
     weight: 1
