--- a/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.contact_information.yml
@@ -1,8 +1,9 @@
-uuid: da0d8934-82ec-4afe-aabb-bbb04124f9af
+uuid: 315e2e04-89ed-4424-a59d-e1732a930747
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.contact_information
     - field.field.group.program.field_address
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
@@ -13,19 +14,36 @@ dependencies:
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
-id: group.program.default
+  module:
+    - address
+    - telephone
+id: group.program.contact_information
 targetEntityType: group
 bundle: program
-mode: default
+mode: contact_information
 content:
-  field_summary:
+  field_address:
+    type: address_default
     weight: 1
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
     region: content
-    type: string
-    label: hidden
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_email:
+    type: basic_string
+    weight: 2
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+  field_phone:
+    type: telephone_link
+    weight: 3
+    region: content
+    label: above
+    settings:
+      title: ''
+    third_party_settings: {  }
   label:
     label: hidden
     type: string
@@ -37,12 +55,10 @@ content:
 hidden:
   changed: true
   created: true
-  field_address: true
   field_audience: true
   field_building: true
-  field_email: true
   field_logo: true
-  field_phone: true
   field_shortname_or_acronym: true
+  field_summary: true
   field_topics: true
   uid: true
