--- a/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.teaser.yml
@@ -1,8 +1,9 @@
-uuid: da0d8934-82ec-4afe-aabb-bbb04124f9af
+uuid: 010bfcca-383e-469c-8412-41468d6722a7
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.teaser
     - field.field.group.program.field_address
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
@@ -13,10 +14,10 @@ dependencies:
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
-id: group.program.default
+id: group.program.teaser
 targetEntityType: group
 bundle: program
-mode: default
+mode: teaser
 content:
   field_summary:
     weight: 1
