--- a/web/sites/default/config/field.field.group.bureau_office.field_address.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_address.yml
@@ -18,7 +18,7 @@ entity_type: group
 bundle: bureau_office
 label: Address
 description: 'Please provide the mailing address for this office.'
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -32,6 +32,8 @@ settings:
     additionalName:
       override: hidden
     familyName:
+      override: hidden
+    organization:
       override: hidden
     sortingCode:
       override: hidden
