--- a/web/sites/default/config/field.field.group.program.field_address.yml
+++ b/web/sites/default/config/field.field.group.program.field_address.yml
@@ -1,10 +1,10 @@
-uuid: e1c1bf16-7a20-416b-a7ef-abb41dc1b04e
+uuid: 71b7a274-7063-462c-86fd-0a1a91cdfdc9
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_address
-    - paragraphs.paragraphs_type.address
+    - field.storage.group.field_address
+    - group.type.program
   module:
     - address
     - custom_add_another
@@ -12,14 +12,14 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.address.field_address
+id: group.program.field_address
 field_name: field_address
-entity_type: paragraph
-bundle: address
+entity_type: group
+bundle: program
 label: Address
-description: 'Enter an address.'
+description: 'Please provide the mailing address for this office.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -35,10 +35,8 @@ settings:
       override: hidden
     organization:
       override: hidden
-    addressLine2:
-      override: optional
     sortingCode:
-      override: optional
+      override: hidden
     dependentLocality:
       override: hidden
   fields: {  }
