--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -3,27 +3,75 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.program.field_address
     - field.field.group.program.field_audience
+    - field.field.group.program.field_building
+    - field.field.group.program.field_email
     - field.field.group.program.field_logo
+    - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
     - image.style.thumbnail
   module:
+    - address
     - chosen_field
+    - field_group
     - image
     - maxlength
+    - telephone
+third_party_settings:
+  field_group:
+    group_contact_information:
+      children:
+        - field_address
+        - field_phone
+        - field_email
+        - field_building
+      parent_name: ''
+      weight: 20
+      format_type: fieldset
+      format_settings:
+        id: contact-information
+        classes: ''
+        description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
+        required_fields: true
+      label: 'Contact Information'
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_address:
+    weight: 6
+    settings:
+      default_country: null
+    third_party_settings: {  }
+    type: address_default
+    region: content
   field_audience:
     weight: 3
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
+    region: content
+  field_building:
+    weight: 9
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_email:
+    weight: 8
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: email_default
     region: content
   field_logo:
     type: image_image
@@ -33,6 +81,13 @@ content:
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
+  field_phone:
+    weight: 7
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: telephone_default
+    region: content
   field_shortname_or_acronym:
     weight: 1
     settings:
