--- a/web/sites/default/config/core.entity_form_display.paragraph.address.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.address.default.yml
@@ -4,29 +4,32 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.address.field_address
+    - field.field.paragraph.address.field_location_name
     - paragraphs.paragraphs_type.address
   module:
     - address
-    - content_moderation
 id: paragraph.address.default
 targetEntityType: paragraph
 bundle: address
 mode: default
 content:
   field_address:
-    weight: 101
+    weight: 1
     settings:
       default_country: null
     third_party_settings: {  }
     type: address_default
     region: content
-  moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+  field_location_name:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
 hidden:
   created: true
+  moderation_state: true
   status: true
   uid: true
