--- a/web/sites/default/config/core.entity_view_display.paragraph.address.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.address.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.address.field_address
+    - field.field.paragraph.address.field_location_name
     - paragraphs.paragraphs_type.address
   module:
     - address
@@ -18,5 +19,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: address_default
+    region: content
+  field_location_name:
+    weight: 1
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden: {  }
