POWR-243 Remove classes from regions that were causing issue Adding row means elements stop taking full width as it adds flex

--- a/web/sites/default/config/cloudy.settings.yml
+++ b/web/sites/default/config/cloudy.settings.yml
@@ -52,13 +52,13 @@ bootstrap_barrio_region_class_primary_menu: ''
 bootstrap_barrio_region_clean_secondary_menu: 0
 bootstrap_barrio_region_class_secondary_menu: row
 bootstrap_barrio_region_clean_banner_top: 0
-bootstrap_barrio_region_class_banner_top: row
+bootstrap_barrio_region_class_banner_top: ''
 bootstrap_barrio_region_clean_page_top: 0
 bootstrap_barrio_region_class_page_top: row
 bootstrap_barrio_region_clean_page_bottom: 0
 bootstrap_barrio_region_class_page_bottom: row
 bootstrap_barrio_region_clean_highlighted: 0
-bootstrap_barrio_region_class_highlighted: row
+bootstrap_barrio_region_class_highlighted: ''
 bootstrap_barrio_region_clean_featured_top: 0
 bootstrap_barrio_region_class_featured_top: row
 bootstrap_barrio_region_clean_breadcrumb: 1
