--- a/web/sites/default/config/core.entity_view_display.paragraph.location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.location.default.yml
@@ -15,7 +15,7 @@ content:
   field_location_type:
     type: entity_reference_revisions_entity_view
     weight: 0
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
