POWR-291 follow ups on the display modes of each content type.

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.contact_information.yml
@@ -44,22 +44,43 @@ content:
     region: content
     label: hidden
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_email:
-    type: basic_string
+    type: email_mailto
     weight: 2
     region: content
     label: hidden
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_official_organization_name:
     type: string
     weight: 0
     region: content
     label: hidden
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_phone:
     type: telephone_link
     weight: 3
@@ -67,7 +88,14 @@ content:
     label: hidden
     settings:
       title: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   changed: true
   created: true
