--- a/web/sites/default/config/core.entity_view_display.paragraph.address.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.address.default.yml
@@ -8,21 +8,29 @@ dependencies:
     - paragraphs.paragraphs_type.address
   module:
     - address
+    - ds
 id: paragraph.address.default
 targetEntityType: paragraph
 bundle: address
 mode: default
 content:
   field_address:
-    weight: 0
-    label: above
+    weight: 1
+    label: hidden
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: address_default
     region: content
   field_location_name:
-    weight: 1
-    label: above
+    weight: 0
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
