--- a/web/sites/default/config/core.entity_view_display.paragraph.building.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.building.default.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - field.field.paragraph.building.field_building
     - paragraphs.paragraphs_type.building
+  module:
+    - ds
 id: paragraph.building.default
 targetEntityType: paragraph
 bundle: building
@@ -12,10 +14,18 @@ mode: default
 content:
   field_building:
     weight: 0
-    label: above
+    label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: address
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
 hidden: {  }
