--- a/web/sites/default/config/core.entity_view_display.paragraph.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_location.default.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - field.field.paragraph.service_location.field_service_location
     - paragraphs.paragraphs_type.service_location
+  module:
+    - ds
 id: paragraph.service_location.default
 targetEntityType: paragraph
 bundle: service_location
@@ -12,10 +14,18 @@ mode: default
 content:
   field_service_location:
     weight: 0
-    label: above
+    label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
 hidden: {  }
