POWR-95 remove lightning dependency and swiftype

--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -140,3 +140,5 @@ field_group: 0.0.0
 openid_connect: 1.0.0-beta5
 gmedia: '1'
 responsive_image: 0.0.0
+search_api_solr: 0.0.0
+search_api_pantheon: 1.0.0-alpha3
