--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -72,7 +72,6 @@ module:
   lightning_page: 0
   lightning_roles: 0
   lightning_scheduler: 0
-  lightning_search: 0
   lightning_workflow: 0
   link: 0
   link_class: 0
@@ -106,11 +105,12 @@ module:
   schemata_json_schema: 0
   search_api: 0
   search_api_db: 0
+  search_api_pantheon: 0
+  search_api_solr: 0
   serialization: 0
   shortcut: 0
   simple_oauth: 0
   simple_oauth_extras: 0
-  swiftype_integration: 0
   system: 0
   taxonomy: 0
   telephone: 0
