--- a/web/sites/default/config/core.entity_view_display.media.document.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.document.default.yml
@@ -17,18 +17,23 @@ targetEntityType: media
 bundle: document
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   created:
-    label: hidden
+    label: inline
     type: timestamp
-    weight: 4
+    weight: 5
     settings:
-      date_format: medium
+      date_format: short
       custom_date_format: ''
       timezone: ''
     third_party_settings: {  }
     region: content
   field_document:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       use_description_as_link_text: true
@@ -36,7 +41,7 @@ content:
     type: file_default
     region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -46,19 +51,18 @@ content:
   name:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     settings:
       link_to_entity: false
     third_party_settings: {  }
     region: content
   uid:
-    label: hidden
+    label: inline
     type: author
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
 hidden:
-  content_moderation_control: true
   field_media_in_library: true
   thumbnail: true
