POWR-95 configure initial index on multidev and copy down for cex

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -14,6 +14,7 @@ module:
   chosen_lib: 0
   ckeditor: 0
   cleave: 0
+  comment: 0
   components: 0
   conditional_fields: 0
   config: 0
@@ -105,6 +106,7 @@ module:
   schemata_json_schema: 0
   search_api: 0
   search_api_db: 0
+  search_api_page: 0
   search_api_pantheon: 0
   search_api_solr: 0
   serialization: 0
