--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -142,3 +142,5 @@ gmedia: '1'
 responsive_image: 0.0.0
 search_api_solr: 0.0.0
 search_api_pantheon: 1.0.0-alpha3
+comment: 8.5.6
+search_api_page: 1.0.0-alpha12
