--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -1,6 +1,6 @@
 uuid: 0f4714a7-66be-48ef-bd1c-cc4f312e1d35
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - search_api.index.content
@@ -50,10 +50,13 @@ display:
       pager:
         type: mini
         options:
-          items_per_page: 10
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -62,9 +65,6 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: default
         options:
