POWR-95 style the search form enough to push

--- a/web/sites/default/config/block.block.searchapipagesearchblockform_2.yml
+++ b/web/sites/default/config/block.block.searchapipagesearchblockform_2.yml
@@ -1,4 +1,4 @@
-uuid: f277fa71-7f24-4cfe-9e78-8d68a4029083
+uuid: ab762bdc-4b57-4ade-a2be-a6838396969a
 langcode: en
 status: true
 dependencies:
@@ -9,9 +9,9 @@ dependencies:
     - system
   theme:
     - cloudy
-id: searchapipagesearchblockform
+id: searchapipagesearchblockform_2
 theme: cloudy
-region: header_form
+region: featured_top
 weight: 0
 provider: null
 plugin: search_api_page_form_block
@@ -25,5 +25,5 @@ visibility:
   request_path:
     id: request_path
     pages: '<front>'
-    negate: true
+    negate: false
     context_mapping: {  }
