POWR-95 fix permission for the search page

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -29,4 +29,5 @@ permissions:
   - 'view latest version'
   - 'view media'
   - 'view own unpublished content'
+  - 'view search api pages'
   - 'view the administration theme'
