POWR-134 Video alignment. Fix media entity view.

--- a/web/sites/default/config/core.entity_view_display.media.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.video.default.yml
@@ -17,9 +17,24 @@ targetEntityType: media
 bundle: video
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  created:
+    type: timestamp
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      date_format: short
+      custom_date_format: ''
+      timezone: ''
+    third_party_settings: {  }
   field_media_video_embed_field:
     type: video_embed_field_video
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       responsive: true
@@ -38,14 +53,19 @@ content:
   name:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     settings:
       link_to_entity: false
     third_party_settings: {  }
     region: content
+  uid:
+    type: entity_reference_label
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
 hidden:
-  content_moderation_control: true
-  created: true
   field_media_in_library: true
   thumbnail: true
-  uid: true
