--- a/web/sites/default/config/core.entity_view_display.paragraph.video.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.video.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.video.field_caption
     - field.field.paragraph.video.field_video
-    - field.field.paragraph.video.field_video_align
+    - field.field.paragraph.video.field_video_alignment
     - paragraphs.paragraphs_type.video
 id: paragraph.video.default
 targetEntityType: paragraph
@@ -23,4 +23,4 @@ content:
     region: content
 hidden:
   field_caption: true
-  field_video_align: true
+  field_video_alignment: true
