--- a/web/sites/default/config/views.view.media_entity.yml
+++ b/web/sites/default/config/views.view.media_entity.yml
@@ -1,20 +1,26 @@
-uuid: 5aca3a5c-267f-4fee-b363-11db96b8ce80
+uuid: 18c0cf87-5bdd-49b8-872d-db561e8e5c93
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.media.field_document
+    - field.storage.media.field_media_video_embed_field
     - field.storage.media.field_summary
-    - media.type.document
+    - field.storage.media.field_transcript
+    - field.storage.media.image
+    - responsive_image.styles.paragraph_image
   module:
     - content_moderation
     - file
     - media
+    - responsive_image
+    - text
     - user
-id: document
-label: Document
+    - video_embed_field
+id: media_entity
+label: 'Media entity'
 module: views
-description: ''
+description: 'Display the individual Media entity'
 tag: ''
 base_table: media_field_data
 base_field: mid
@@ -634,6 +640,198 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        image:
+          id: image
+          table: media__image
+          field: image
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: responsive_image
+          settings:
+            responsive_image_style: paragraph_image
+            image_link: ''
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_media_video_embed_field:
+          id: field_media_video_embed_field
+          table: media__field_media_video_embed_field
+          field: field_media_video_embed_field
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: video_embed_field_video
+          settings:
+            autoplay: true
+            responsive: true
+            width: 854
+            height: 480
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_transcript:
+          id: field_transcript
+          table: media__field_transcript
+          field: field_transcript
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         uid:
           id: uid
           table: media_field_data
@@ -833,16 +1031,7 @@ display:
           entity_type: media
           entity_field: changed
           plugin_id: field
-      filters:
-        bundle:
-          id: bundle
-          table: media_field_data
-          field: bundle
-          value:
-            document: document
-          entity_type: media
-          entity_field: bundle
-          plugin_id: bundle
+      filters: {  }
       sorts: {  }
       title: Document
       header: {  }
@@ -898,6 +1087,9 @@ display:
           entity_field: mid
           plugin_id: numeric
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -907,7 +1099,10 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.media.field_document'
+        - 'config:field.storage.media.field_media_video_embed_field'
         - 'config:field.storage.media.field_summary'
+        - 'config:field.storage.media.field_transcript'
+        - 'config:field.storage.media.image'
   page_1:
     display_plugin: page
     id: page_1
@@ -925,4 +1120,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.media.field_document'
+        - 'config:field.storage.media.field_media_video_embed_field'
         - 'config:field.storage.media.field_summary'
+        - 'config:field.storage.media.field_transcript'
+        - 'config:field.storage.media.image'
