--- a/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - entity_browser.browser.video_browser
     - field.field.paragraph.video.field_caption
     - field.field.paragraph.video.field_video
-    - field.field.paragraph.video.field_video_align
+    - field.field.paragraph.video.field_video_alignment
     - paragraphs.paragraphs_type.video
   module:
     - content_moderation
@@ -44,8 +44,8 @@ content:
       field_widget_edit: false
     region: content
     third_party_settings: {  }
-  field_video_align:
-    weight: 1
+  field_video_alignment:
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
