--- a/web/sites/default/config/field.field.paragraph.video.field_video_alignment.yml
+++ b/web/sites/default/config/field.field.paragraph.video.field_video_alignment.yml
@@ -1,9 +1,9 @@
-uuid: b5c11b62-45a5-4325-834c-70123b4562d0
+uuid: d9564c06-dfd4-4a37-93f6-a5104e19c424
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_video_align
+    - field.storage.paragraph.field_video_alignment
     - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
@@ -12,12 +12,12 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.video.field_video_align
-field_name: field_video_align
+id: paragraph.video.field_video_alignment
+field_name: field_video_alignment
 entity_type: paragraph
 bundle: video
 label: 'Video alignment'
-description: ''
+description: 'Specify how the next paragraph wrap around this video.'
 required: false
 translatable: false
 default_value: {  }
