--- a/web/sites/default/config/field.storage.paragraph.field_video_alignment.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_video_alignment.yml
@@ -1,12 +1,12 @@
-uuid: 493f2284-35b4-40ba-99ba-2a1d11c219b0
+uuid: 7f115a30-5bdb-4908-93ac-75a3a9a28ad2
 langcode: en
 status: true
 dependencies:
   module:
     - options
     - paragraphs
-id: paragraph.field_video_align
-field_name: field_video_align
+id: paragraph.field_video_alignment
+field_name: field_video_alignment
 entity_type: paragraph
 type: list_string
 settings:
