POWR-134 Adjust image paragraph form display

--- a/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
@@ -11,18 +11,24 @@ dependencies:
   module:
     - content_moderation
     - entity_browser
+    - maxlength
 id: paragraph.image.default
 targetEntityType: paragraph
 bundle: image
 mode: default
 content:
   field_caption:
-    weight: 3
+    weight: 2
     settings:
-      size: 60
+      rows: 2
       placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
+    type: string_textarea
     region: content
   field_image:
     type: entity_browser_entity_reference
@@ -39,7 +45,7 @@ content:
     region: content
     third_party_settings: {  }
   field_image_alignment:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
