--- a/web/sites/default/config/block.block.cloudy_views_block__group_notifications_block_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_notifications_block_block_1.yml
@@ -1,22 +1,22 @@
-uuid: 92224528-c725-4f1f-b835-bd5514db8aa1
+uuid: c42c8969-795d-4d34-88eb-bfd5f3976988
 langcode: en
 status: true
 dependencies:
   config:
-    - views.view.group_notifications_content
+    - views.view.group_notifications_block
   module:
     - system
     - views
   theme:
     - cloudy
-id: cloudy_views_block__group_notifications_content_block_1
+id: cloudy_views_block__group_notifications_block_block_1
 theme: cloudy
 region: highlighted
 weight: -12
 provider: null
-plugin: 'views_block:group_notifications_content-block_1'
+plugin: 'views_block:group_notifications_block-block_1'
 settings:
-  id: 'views_block:group_notifications_content-block_1'
+  id: 'views_block:group_notifications_block-block_1'
   label: ''
   provider: views
   label_display: '0'
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: '/node/*'
-    negate: false
+    pages: '/group/*/notifications'
+    negate: true
     context_mapping: {  }
