--- a/web/sites/default/config/views.view.group_notifications_block.yml
+++ b/web/sites/default/config/views.view.group_notifications_block.yml
@@ -1,4 +1,4 @@
-uuid: 1febebb9-48da-4112-b809-207525d6df19
+uuid: e6ed8e0c-0fbd-439b-8583-0f12f49a7af9
 langcode: en
 status: true
 dependencies:
@@ -6,21 +6,19 @@ dependencies:
     - field.storage.node.field_action_link
     - field.storage.node.field_notification_severity
     - field.storage.node.field_summary
-    - node.type.notification
   module:
     - group
     - link
     - node
     - options
     - portland
-    - user
-id: group_notifications_content
-label: 'Group notifications content'
+id: group_notifications_block
+label: 'Group notifications block'
 module: views
-description: 'Block for displaying notifications on group content'
+description: 'Notifications displayed on the group homepages'
 tag: ''
-base_table: node_field_data
-base_field: nid
+base_table: group_content_field_data
+base_field: id
 core: 8.x
 display:
   default:
@@ -30,9 +28,8 @@ display:
     position: 0
     display_options:
       access:
-        type: perm
-        options:
-          perm: 'access content'
+        type: none
+        options: {  }
       cache:
         type: tag
         options: {  }
@@ -75,6 +72,11 @@ display:
           dismissible: 1
       row:
         type: fields
+        options:
+          default_field_elements: true
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         title:
           id: title
@@ -103,8 +105,8 @@ display:
             target: ''
             nl2br: false
             max_length: 0
-            word_boundary: false
-            ellipsis: false
+            word_boundary: true
+            ellipsis: true
             more_link: false
             more_link_text: ''
             more_link_path: ''
@@ -112,7 +114,7 @@ display:
             trim: false
             preserve_tags: ''
             html: false
-          element_type: ''
+          element_type: strong
           element_class: ''
           element_label_type: ''
           element_label_class: ''
@@ -149,10 +151,10 @@ display:
           group_type: group
           admin_label: ''
           label: ''
-          exclude: false
+          exclude: true
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ field_notification_severity|lower }}'
             make_link: false
             path: ''
             absolute: false
@@ -190,7 +192,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: list_key
+          type: list_default
           settings: {  }
           group_column: value
           group_columns: {  }
@@ -276,8 +278,8 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '<a class="btn btn-outline-{{ field_notification_severity }}" href={{ field_action_link__uri }}>{{ field_action_link__title }}</a>'
             make_link: false
             path: ''
             absolute: false
@@ -315,7 +317,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: uri
-          type: link
+          type: link_separate
           settings:
             trim_length: null
             url_only: false
@@ -385,7 +387,7 @@ display:
           type: timestamp
           settings:
             date_format: custom
-            custom_date_format: 'g:i a M j, Y'
+            custom_date_format: 'g:i a M j, Y '
             timezone: ''
           group_column: value
           group_columns: {  }
@@ -468,26 +470,14 @@ display:
           plugin_id: field
       filters:
         status:
-          value: '1'
+          id: status
           table: node_field_data
           field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
-        type:
-          id: type
-          table: node_field_data
-          field: type
           relationship: gc__node
           group_type: group
           admin_label: ''
-          operator: in
-          value:
-            notification: notification
+          operator: '='
+          value: '1'
           group: 1
           exposed: false
           expose:
@@ -502,8 +492,6 @@ display:
             multiple: false
             remember_roles:
               authenticated: authenticated
-            reduce: false
-            argument: null
           is_grouped: false
           group_info:
             label: ''
@@ -517,8 +505,8 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: node
-          entity_field: type
-          plugin_id: bundle
+          entity_field: status
+          plugin_id: boolean
       sorts:
         field_notification_severity_value:
           id: field_notification_severity_value
@@ -536,7 +524,7 @@ display:
           id: changed
           table: node_field_data
           field: changed
-          relationship: none
+          relationship: gc__node
           group_type: group
           admin_label: ''
           order: DESC
@@ -547,68 +535,16 @@ display:
           entity_type: node
           entity_field: changed
           plugin_id: date
-      title: 'Group notifications content'
+      title: 'Group notifications block'
       header: {  }
       footer: {  }
       empty: {  }
       relationships:
-        group_content:
-          id: group_content
-          table: node_field_data
-          field: group_content
-          relationship: none
-          group_type: group
-          admin_label: 'Content group content'
-          required: true
-          group_content_plugins:
-            'group_node:alert': '0'
-            'group_node:building': '0'
-            'group_node:city_service': '0'
-            'group_node:event': '0'
-            'group_node:guide': '0'
-            'group_node:information': '0'
-            'group_node:news': '0'
-            'group_node:notification': '0'
-            'group_node:service_location': '0'
-          entity_type: node
-          plugin_id: group_content_to_entity_reverse
-        gid:
-          id: gid
-          table: group_content_field_data
-          field: gid
-          relationship: group_content
-          group_type: group
-          admin_label: Group
-          required: true
-          entity_type: group_content
-          entity_field: gid
-          plugin_id: standard
-        group_content_id:
-          id: group_content_id
-          table: groups_field_data
-          field: group_content_id
-          relationship: gid
-          group_type: group
-          admin_label: 'Group content'
-          required: false
-          group_content_plugins:
-            'group_node:notification': 'group_node:notification'
-            'group_node:alert': '0'
-            'group_node:building': '0'
-            'group_node:city_service': '0'
-            'group_node:event': '0'
-            'group_node:guide': '0'
-            'group_node:information': '0'
-            'group_node:news': '0'
-            'group_node:service_location': '0'
-            group_membership: '0'
-          entity_type: group
-          plugin_id: group_to_group_content
         gc__node:
           id: gc__node
           table: group_content_field_data
           field: gc__node
-          relationship: group_content_id
+          relationship: none
           group_type: group
           admin_label: 'Group content Content'
           required: false
@@ -624,12 +560,23 @@ display:
             'group_node:service_location': '0'
           entity_type: group_content
           plugin_id: group_content_to_entity
-      arguments:
-        nid:
-          id: nid
-          table: node_field_data
-          field: nid
+        gid:
+          id: gid
+          table: group_content_field_data
+          field: gid
           relationship: none
+          group_type: group
+          admin_label: Group
+          required: true
+          entity_type: group_content
+          entity_field: gid
+          plugin_id: standard
+      arguments:
+        field_shortname_or_acronym_value:
+          id: field_shortname_or_acronym_value
+          table: group__field_shortname_or_acronym
+          field: field_shortname_or_acronym_value
+          relationship: gid
           group_type: group
           admin_label: ''
           default_action: default
@@ -639,8 +586,10 @@ display:
             title: All
           title_enable: false
           title: ''
-          default_argument_type: node
-          default_argument_options: {  }
+          default_argument_type: raw
+          default_argument_options:
+            index: 0
+            use_alias: true
           default_argument_skip_url: false
           summary_options:
             base_path: ''
@@ -656,11 +605,13 @@ display:
             type: none
             fail: 'not found'
           validate_options: {  }
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
           break_phrase: false
-          not: false
-          entity_type: node
-          entity_field: nid
-          plugin_id: node_nid
+          plugin_id: string
       display_extenders: {  }
     cache_metadata:
       max-age: -1
@@ -668,8 +619,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - 'user.node_grants:view'
-        - user.permissions
       tags:
         - 'config:field.storage.node.field_action_link'
         - 'config:field.storage.node.field_notification_severity'
@@ -681,14 +630,14 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      display_description: 'Block for displaying notifications on the homepage'
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - 'user.node_grants:view'
-        - user.permissions
       tags:
         - 'config:field.storage.node.field_action_link'
         - 'config:field.storage.node.field_notification_severity'
